--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -18,7 +18,7 @@
 }
 html {
   font-size: 18px;
-  font-family: sans-serif;
+  font-family: filson-pro, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -27,6 +27,10 @@ body {
   margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: maroon;
+  font-family: 'WindsorD-Bol';
+}
 a, a:link, a:visited {
   color: #333;
 }
