--- a/src/components/demo1.scss
+++ b/src/components/demo1.scss
@@ -39,6 +39,9 @@
     .header-controls {
       margin-left: auto;
     }
+    .nav-container__searchContainer {
+      margin-right: 1em;
+    }
   }
   .nav {
     padding-left: 1rem;
