--- a/src/components/user-popover.scss
+++ b/src/components/user-popover.scss
@@ -10,6 +10,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    outline: none;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
