add more hot garbage, fix carousel sort

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -42,6 +42,13 @@ p > code {
 h1 strong {
   text-decoration: underline;
 }
+// .full-screen-slide main {
+//   align-items: center;
+//   display: flex;
+//   height: 100vh;
+//   justify-content: center;
+//   width: 100vw;
+// }
 main.app > div {
   padding: 1.5em;
 }
