--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -60,7 +60,7 @@ section.two-col {
   background-color: #333;
   border: none;
   border-radius: 0.5rem;
-  color: #fff;
+  color: #999;
   display: inline-block;
   font-size: 2rem;
   margin: 0rem 0 1.5rem;
