--- a/src/components/dialog-tabception.scss
+++ b/src/components/dialog-tabception.scss
@@ -18,6 +18,20 @@ dialog {
     bottom: 0;
     width: 80%;
     height: 80%;
+    z-index: 1;
+}
+dialog[open=""] + .curtain {
+    background-color: rgba(0,0,0,0.75);
+    content: '';
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+}
+dialog {
+    z-index: 1;
 }
 .close {
     color: #999;
