update dumpster icon

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -26,7 +26,9 @@ body {
   font-family: sans-serif;
   margin: 0;
 }
-
+.slide-title {
+  transform: scale(1.5);
+}
 h1, h2, h3, h4, h5, h6 {
   color: maroon;
   font-family: 'WindsorD-Bol';
